fix sub list spacing

--- a/all/scss/components/_post.scss
+++ b/all/scss/components/_post.scss
@@ -163,7 +163,6 @@ $post-copy-code-action-bg-color: $default-action-color-hover !default;
 		margin-right: 0;
 		padding-left: ($post-spacing * 2);
 
-		&,
 		& & {
 			margin: $post-spacing ($post-spacing * 3);
 			margin-right: 0;
